--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,5 @@
 server:
   port: 8080
-  servlet:
-    context-path: /foundationMail
 
 spring:
   application:
@@ -19,7 +17,7 @@ spring:
     host: smtp.gmail.com
     port: 587
     username: raghulrayabarapu868@gmail.com
-    password: #enter password here
+    password: abcd#enter password here
     properties:
       mail:
         smtp:
